--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Git testing</h2>
+    <div class="container">
+      <h1>Testing</h1>
+    </div>
   </body>
 </html>
